# ncu-tldr

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  skills-lock.json
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 2026_02_26_2105-ee6ea0b7b0bf_create_users_departments_teachers_.py  2026_03_09_1030-381b8c6814da_add_comments_and_comment_votes_tables.py  2026_03_17_2348-353b43253264_migration_3_relation_tables_no_fk.py  2026_03_17_2348-50b6a42940f4_migration_1_base_tables_no_fk.py  2026_03_17_2348-a247ff1100bf_migration_5_indexes_concurrently.py  2026_03_17_2348-a478b363ef7f_migration_6_metadata_and_materialized_.py  2026_03_17_2348-c006c0ea1911_migration_2_courses_and_enum.py  2026_03_17_2348-e2f220a299e5_migration_4_add_foreign_keys.py  v10__d3f9a1c2b4e5__add_review_extra_fields.py  v11__e8c3f72a1d09__redesign_wishlist.py  v12__8bed4b506975__add_email_verification.py  v13__f2a9d841c3b7__reviews_optional_fields.py  v14__9c31b8ea42fd__comments_drop_title_require_user.py  v15__5dc0a0a89f21__comments_preserve_history_on_delete.py  v16__1a2b3c4d5e6f__soft_delete_reviews_comments.py  (+6 more)
backend/app/: config.py
backend/app/db/: deps.py  (+1 more)
backend/scripts/: all.json  automation_note.md  extract_from_json.py  migrate_and_seed.ps1  migrate_and_seed.sh  migration_1_to_6.md  seed_comments.sql
backend/tests/: conftest.py  test_auth.py  test_auth_schemas.py  test_auth_service.py  test_comments.py  test_courses.py  test_email_service.py  test_email_verification_token_repo.py  test_refresh_token_repo.py  test_reviews.py  test_security.py  test_soft_delete.py  test_wishlist.py
(+146 files in other folders)
